@@ -1,3 +1,9 @@
+2008-01-15  Robert Millan  <rmh@aybabtu.com>
+
+	* kern/powerpc/ieee1275/openfw.c (grub_available_iterate): Obtain
+	actual size of `available' from grub_ieee1275_get_property(), and
+	restrict parsing to that bound.
+
 2008-01-15  Christian Franke  <franke@computer.org>
 
 	* util/grub-emu.c: Replace <argp.h> by <getopt.h>.
